--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     >/nav>
     </header>
     <main>
-  <h1>quimica</h1>
+  <h1>Química</h1>
  <div class="PRIMEIROPARAGRAFO">
    <h3> TITULO DO TEXTO</h3>h3>
    <p><i><b> TEXTO</b>b></p>
