--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <main>
   <h1>Química</h1>
  <div class="PRIMEIROPARAGRAFO">
-   <h3> TITULO DO TEXTO</h3>h3>
-   <p><i><b> TEXTO</b>b></p>
+   <h3> Equilibrio Químico</h3>h3>
+   <p><i><b> Tipos de Equilíbrio homogenio: todas as substâncias estão no mesmo estado físico. Equilíbrio heterogênio: Substancias em diferentes estados físicos. Equilíbrio Químico reversivel: As reaçoẽs ocorrem em ambas As reaçoẽs ocorrem em ambas as direções. Fatores que afetam o Equilíbrio: Concentração: Mudanças na concentração das substâncias. Temperatura: mudanças na temperatura afetam a constante do equilíbrio. Pressão: Mudanças na pressão afetam o equelíbrio em reaçoẽs com gases. Catalisadores: Substâncias que aceleram as reaçoẽs sem afetar o equilíbrio. Leis do Equílibrio Químico: Lei da ação de massas: a velocidade de reação é proporcional a concentração das substâncias. Lei de Eqilíbrio Quimico: A constante do equilíbrio é igual á relação entre as concentrações das substâncias. Exemplos: Reação entre hidrogênio e oxigênio para formar aǵua. reação entre dióxido de carbono e aǵua para formar acido carbônio. Reação de dissociação do ácido acético. Caracteristicas: Concentração: Mudanças na concentração das substância não mudam. Reações reversíveis: As Reações ocorrem em ambas as direções. Equilíbrio Dinâmico: As moléculas continuam se movendo e reagindo. Constante de equilíbrio (K): Relaciona as concentrações das substâncias.  </b>b></p>
    <ul id="lista02">
      <li>ITEM 01 </li>
      <li>ITEM 02</li>
